css/main.css
/* ---- coming soon page ---- */

body {
  font-family: "Tenor Sans", sans-serif;
}

.tenor {
  font-family: "Tenor Sans", sans-serif;
}

p {
  font-size: 95%;
  font-family: Lora, sans-serif;
}

h2 {
  letter-spacing: -.04em;
}

.kern-tight {
  letter-spacing: -.08em;
}

.kern-tight-2 {
  letter-spacing: -.11em;
}

.kern-tight-half {
  letter-spacing: -.06em;
}

.social-list {
  list-style-type: none;
  padding-left: 0;
}

.tena {
  line-height: 0.85;
}

.zetta {
  line-height: 0.95;
}

.mega-line {
  line-height: 1.2;
}

.yotta {
  line-height: 1;
}

.nina {
  font-size: 2.35rem;
  line-height: 1;
}

@media only screen and (min-width: 38em) {

  .nina {
    font-size: 4.2998rem;
  }

}

.cover {
  background: url("../images/cover-coming.jpg") no-repeat left top / cover;
  min-height: 100vh;
}

.icon-social {
  height: 36px;
  width: 36px;
}

.grid-next {
  padding-top: .5em;
}

@media only screen and (min-width: 38em) {

  .icon-next,
  .icon-previous {
    height: 60px;
    width: 156px;
  }
  .icon-arrow-next,
  .icon-arrow-previous {
    height: 54px;
    width: 30px;
  }

  .grid-next {
    padding-top: 0;
  }
}

.caps {
  text-transform: uppercase;
}

/* ---- home page ---- */

.i-logo {
  width: 110px;
  height: 52px
}

.zh-logo {
  width: 47px;
  height: 52px
}

.i-prev,
.i-next {
  width: 25px;
  height: 26px
}

.nav-gutter-next {
  position: absolute;
  left: 90%;
  top: 50%;
  transform: translate(-50%, -50%);
  transition: all 0.3s ease-out;
}

.nav-gutter-next:hover,
.nav-gutter-next:focus {
  position: absolute;
  left: 92%;
}

.nav-gutter-prev {
  position: absolute;
  left: 10%;
  top: 50%;
  transform: translate(-50%, -50%);
  transition: all 0.3s ease-out;
}

.nav-gutter-prev:hover,
.nav-gutter-prev:focus {
  position: absolute;
  left: 8%;
}

@media only screen and (min-width: 60em) {

  .nav-gutter-next {
    position: absolute;
    left: 80%;
    top: 50%;
    transform: translate(-50%, -50%);
  }

  .nav-gutter-prev {
    position: absolute;
    left: 20%;
    top: 50%;
    transform: translate(-50%, -50%);
  }

  .nav-gutter-prev:hover,
  .nav-gutter-prev:focus {
    position: absolute;
    left: 18%;
  }

  .nav-gutter-next:hover,
  .nav-gutter-next:focus {
    position: absolute;
    left: 82%;
  }
}

.nav-bar {
  background-color: #121221;
  min-height: 70px;
}

.card-link {
  text-decoration: none;
  color: white;
  cursor: url("../images/zh.cur"), default;
}

.nav-logo-zh {
  position: absolute;
  left: 50%;
  top: -3em;
  width: 100%;
  transform: translate(-50%, -50%);
  display: none;
  transition: all 0.3s ease-in;
}

.nav-logo-ks {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  transition: all 0.3s linear;
  display: inline-block;
}

.nav-hover:hover .nav-logo-zh {
  display: inline-block;
  top: 50%;
}

.nav-hover:hover .nav-logo-ks {
  display: none;
  top: -3em;
}

.nav-hover {
  margin-left: auto;
  margin-right: auto;
  transition: all 2s linear;
}

.cabin {
  font-family: Lora, sans-serif;
}

.pink {
  color: #e52e6b
}

.minh-252px {
  min-height: 252px;
}

footer {
  min-height: 100px;
  margin-top: 2.6rem;
}

.nav-footer a {
  color: #fff;
  text-decoration: none;
  border: solid 2px #121221;
  transition: all 0.3s ease-out;
}

.home:hover ,
.home:focus {
  border-bottom: solid 2px #f92155;
}

.top:hover ,
.top:focus {
  border-top: solid 2px #f92155;
}

/* ---- branding page ---- */

.banner-branding {
  background-image: url("../images/banner-compactmusic.png");
  background-color: #1e1846;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: 0 70px;
  min-height: 350px;
}

.banner-campaign {
  background-image: url("../images/banner-minto.jpg");
  background-color: #533678;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: 0 70px;
  min-height: 350px;
}

.banner-app {
  background-image: url("../images/banner-app.png");
  background-color: #fb7730;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: 0 70px;
  min-height: 350px;
}

.banner-symbol {
  background-image: url("../images/banner-manticore.png");
  background-color: #882435;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: 0 70px;
  min-height: 350px;
}

.banner-home {
  background-image: url("../images/banner-home.jpg");
  background-color: #cc1d23;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: 0 0;
  min-height: 250px;
}

.max-length-l {
  max-width: 36em;
  width: 100%;
}

.max-length-l-banner {
  position: absolute;
  width: 100%;
  left: 50%;
  top: 85%;
  transform: translate(-50%, -50%);
  color: #fff;
}

.max-length-l-banner-home {
  position: absolute;
  width: 100%;
  left: 40%;
  top: 50%;
  transform: translate(-50%, -50%);
}

@media only screen and (min-width: 38em) {

  .max-length-l-banner {
    top: 78%;
  }

}


@media only screen and (min-width: 60em) {

  .max-length-l-banner,
  .max-length-l-banner-home {
    max-width: 52em;
  }

  .max-length-l-banner {
    top: 75%;
  }

}

.max-length-l2 {
  max-width: 42em;
  width: 100%;
}

.email-link-footer {
  color: #fff;
  cursor: pointer;
  text-decoration: none;
}

.by {
  color: white;
  font-family: "Tenor Sans", sans-serif;
}


.embed-778 {
  padding-top: 77.8%;
}

.embed-1186 {
  padding-top: 118.6%;
}

.embed-522 {
  padding-top: 52.2%;
}

.embed-453 {
  padding-top: 45.35%;
}

.embed-7437 {
  padding-top: 74.37%;
}

.hidden-s {
  display: none;
}

.hidden-m {
  display: inline-block;
}

@media only screen and (min-width: 38em) {

  .hidden-s {
    display: inline-block;
  }

  .hidden-m {
    display: none;
  }

}

.work-card-1 {
  background-color: #d50e8b;
}

.work-card-2 {
  background-color: #390969;
}

.work-card-3 {
  background-color: #ff5201;
}

.work-card-4 {
  background-color: #cc1d23;
}

.logo-home {
  height: 110px;
  width: 253px;
}

.logo {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  width: 100%;
}

.logo-container {
  min-height: 250px;
}

.being {
  line-height: 0.95;
}

.wrapper-wider {
  margin-left: auto;
  margin-right: auto;
  max-width: 60em;
  width: 100%;
}

.tight {
  line-height: 1.1;
}

.embed-17786 {
  padding-top: 177.86%;
}

.embed-5559 {
  padding-top: 55.59%;
}

.embed-8034 {
  padding-top: 80.34%;
}

.social-icon-t {
  border: solid 2px #121221;
  transition: all 0.3s ease-out;
}

.social-icon-in {
  border: solid 2px #121221;
  transition: all 0.3s ease-out;
}

.social-icon-f {
  border: solid 2px #121221;
  transition: all 0.3s ease-out;
}

.social-icon-f:hover,
.social-icon-f:focus {
  border-top: solid 2px #f92155;
  border-left: solid 2px #f92155;
}

.social-icon-in:hover,
.social-icon-in:focus {
  border-top: solid 2px #f92155;
  border-bottom: solid 2px #f92155;
}

.social-icon-t:hover,
.social-icon-t:focus {
  border-right: solid 2px #f92155;
  border-bottom: solid 2px #f92155;
}

.email-link-footer {
    color: #fff;
    cursor: pointer;
    text-decoration: none;
    border: solid 2px #121221;
    transition: all 0.3s ease-out;
}

.email-link-footer:hover,
.email-link-footer:focus {
  border: solid 2px #f92155;
}

footer {
  background-color: #121221;
}

.underline {
  position: relative;
}

.underline::after {
  content: "";
  background-color: white;
  transition: all 0.3s ease-out;
  height: 3px;
  width: 100%;
  position: absolute;
  bottom: -5px;
  left: 0;
  transform: scaleX(0);
  transform-origin: left bottom;
}

.tracking {
  letter-spacing: .02em;
  transition: all 0.3s ease-out;
}

.work-card:hover .tracking,
.card-link:focus .tracking {
  letter-spacing: .3em;
}

.why-tracking {
  letter-spacing: .01em;
  transition: all 0.3s ease-out;
}

.why:hover .why-tracking,
.why:focus .why-tracking {
  letter-spacing: .1em;
}

.work-card:hover .img-hover-1,
.card-link:focus .img-hover-1 {
  border-top: solid #d50e8b 20px;
  border-right: solid #d50e8b 20px;
  border-left: solid #d50e8b 20px;
  padding-bottom: 20px;
}

.img-hover-1 {
  border: solid #d50e8b 0;
  transition: all 0.3s ease-out;
}

.work-card:hover .img-hover-4,
.card-link:focus .img-hover-4 {
  border-top: solid #cc1d23 20px;
  border-right: solid #cc1d23 20px;
  border-left: solid #cc1d23 20px;
  padding-bottom: 20px;
}

.img-hover-4 {
  border: solid #cc1d23 0;
  transition: all 0.3s ease-out;
}

.work-card:hover .img-hover-3,
.card-link:focus .img-hover-3 {
  border-top: solid #ff5201 20px;
  border-right: solid #ff5201 20px;
  border-left: solid #ff5201 20px;
  padding-bottom: 20px;
}

.img-hover-3 {
  border: solid #ff5201 0;
  transition: all 0.3s ease-out;
}

.work-card:hover .img-hover-2,
.card-link:focus .img-hover-2 {
  border-top: solid #390969 20px;
  border-right: solid #390969 20px;
  border-left: solid #390969 20px;
  padding-bottom: 20px;
}

.img-hover-2 {
  border: solid #390969 0;
  transition: all 0.3s ease-out;
}

.work-card:hover .underline::after,
.card-link:focus .underline::after {
  transform: scaleX(1);
}

.work-card {
  transition: all 0.35s ease-in;
}

.next {
  background: url("../images/banner-next-blue.jpg") no-repeat center center / cover;
  min-height: 90px;
}

.banner-404 {
  background-color: #121221;
  height: 100vh;
}

.content-404 p,
.content-404 aside {
  color: #fff;
  font-family: "Tenor Sans", sans-serif;
  width: 95%;
}

.content-404 .acqua {
  color: #f92155;
}

.content-404 a {
  color: #fff;
}

.width-404 {
  width: 90%;
}

.wrapper-404 {
  margin-left: auto;
  margin-right: auto;
  max-width: 52em;
  width: 90%;
}

.pin-404 {
  left: 50%;
  top: 20%;
  transform: translate(-50%, -50%);
  width: 90%;
}

.pin-404-content {
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 90%;
  max-width: 600px;
}

@media only screen and (min-width:60em) {

  .pin-404 {
    left: 50%;
    top: 25%;
    transform: translate(-50%, -50%);
    width: 50%;
  }
}

@media only screen and (min-width:38em) {

  .pin-404-content {
    left: 50%;
    top: 60%;
    transform: translate(-50%, -50%);
    width: 90%;
    max-width: 600px;
  }
}

@media only screen and (min-width: 25em) {

  blockquote {
    padding-right: 1em;
  }

}

.btn-404 {
  border: 2px solid #f92155;
  background-color: inherit;
  transition: all 0.3s ease-out;
}

.btn-404:hover,
.btn-404:focus {
  border: 2px solid #121221;
  background: url("../images/button-404.jpg") no-repeat center center / cover;
  letter-spacing: .1em;
}

a:focus,
[tabindex="0"]:focus,
details:focus,
summary:focus,
input:focus,
textarea:focus,
button:focus,
select:focus {
  outline: 2px solid #f92155;
  outline-offset: 0;
}

